# lost-and-found-piano

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  UserGuide.pages
src/: EditorView.cpp  EditorView.h  FactoryPresets.h  GroupView.h  LookAndFeel.cpp  LookAndFeel.h  MidiKeyboardComponent.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.cpp  Presets.h  RotaryKnob.cpp  RotaryKnob.h  Settings.cpp  Settings.h
src/dsp/: SharedDefs.h  mdaAmbience.cpp  mdaAmbience.h  mdaEPiano.cpp  mdaEPiano.h  mdaEPianoData.h  mdaPiano.cpp  mdaPiano.h  mdaPianoData.h
src/gui/: EditorView.cpp  EditorView.h  GroupView.h  LookAndFeel.cpp  LookAndFeel.h  MidiKeyboardComponent.cpp  PresetPicker.cpp  PresetPicker.h  RadioButtonAttachment.cpp  RadioButtonAttachment.h  RotaryKnob.cpp  RotaryKnob.h  SelectionBar.h
